light-theme-done

--- a/home-consulting-white-version.html
+++ b/home-consulting-white-version.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="white-version home-sticky spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
+<body class="white-version home-sticky spybody " data-spy="scroll" data-target=".navbar-example2" data-offset="150">
 
     <!-- start Header area -->
     <div class="d-none d-xl-block header-style-2">
@@ -3393,7 +3393,7 @@
 
 
     <!-- JS ============================================ -->
-    <script src="assets/js/vendor/jquery.js"></script>
+    <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="assets/js/vendor/modernizer.min.js"></script>
     <script src="assets/js/vendor/feather.min.js"></script>
     <script src="assets/js/vendor/slick.min.js"></script>
