--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" color-theme="dark">
+<html lang="en" color-theme="light">
 
 <head>
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="template-color-1 home-sticky spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
+<body class="template-color-1 home-sticky spybody " data-spy="scroll" data-target=".navbar-example2" data-offset="150">
 
     <!-- start Header area -->
     <div class="d-none d-xl-block">
