--- a/home-photographer.html
+++ b/home-photographer.html
@@ -1871,7 +1871,7 @@
     </div>
     <!-- Rn footer area end -->
     <!-- JS ============================================ -->
-    <script src="assets/js/vendor/jquery.js"></script>
+    <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="assets/js/vendor/modernizer.min.js"></script>
     <script src="assets/js/vendor/feather.min.js"></script>
     <script src="assets/js/vendor/slick.min.js"></script>
