--- a/social-icones.html
+++ b/social-icones.html
@@ -1157,7 +1157,7 @@
 
 
     <!-- JS ============================================ -->
-    <script src="assets/js/vendor/jquery.js"></script>
+    <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="assets/js/vendor/modernizer.min.js"></script>
     <script src="assets/js/vendor/feather.min.js"></script>
     <script src="assets/js/vendor/slick.min.js"></script>
