--- a/index.html
+++ b/index.html
@@ -2069,7 +2069,7 @@
             </div>
         </div>
         <div class="copyright text-center ptb--40 section-separator">
-            <p class="description">© 2021. All rights reserved by <a target="_blank" href="https://themeforest.net/user/rainbow-themes/portfolio">Rainbow-Themes.</a></p>
+            <p class="description">© 2021. All rights reserved by <a  href="#">Zubair Bhuian</a></p>
         </div>
     </div>
     <!-- Rn footer area end -->
