--- a/index.html
+++ b/index.html
@@ -411,7 +411,11 @@
               <div
                 class="rn-portfolio"
                 data-toggle="modal"
-                data-target="#exampleModalCenter"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -458,7 +462,11 @@
               <div
                 class="rn-portfolio"
                 data-toggle="modal"
-                data-target="#exampleModalCenter"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -506,7 +514,11 @@
               <div
                 class="rn-portfolio"
                 data-toggle="modal"
-                data-target="#exampleModalCenter"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -542,144 +554,156 @@
               </div>
             </div>
             <!-- End Single Portfolio -->
-                        <!-- Start Single Portfolio -->
-                        <div
-                        data-aos="fade-up"
-                        data-aos-delay="500"
-                        data-aos-once="true"
-                        class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
-                      >
-                        <div
-                          class="rn-portfolio"
-                          data-toggle="modal"
-                          data-target="#exampleModalCenter"
-                        >
-                          <div class="inner">
-                            <div class="thumbnail">
-                              <a href="javascript:void(0)">
-                                <img
-                                  src="assets/images/portfolio/portfolio-04.jpg"
-                                  alt="Personal Portfolio Images"
-                                />
-                              </a>
-                            </div>
-                            <div class="content">
-                              <div class="category-info">
-                                <div class="category-list">
-                                  <a href="javascript:void(0)">Photoshop</a>
-                                </div>
-                                <div class="meta">
-                                  <span
-                                    ><a href="javascript:void(0)"
-                                      ><i class="feather-heart"></i
-                                    ></a>
-                                    630</span
-                                  >
-                                </div>
-                              </div>
-                              <h4 class="title">
-                                <a href="javascript:void(0)"
-                                  >Logo design creativity & Application
-                                  <i class="feather-arrow-up-right"></i
-                                ></a>
-                              </h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- End Single Portfolio -->
-                                  <!-- Start Single Portfolio -->
+            <!-- Start Single Portfolio -->
             <div
-            data-aos="fade-up"
-            data-aos-delay="500"
-            data-aos-once="true"
-            class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
-          >
-            <div
-              class="rn-portfolio"
-              data-toggle="modal"
-              data-target="#exampleModalCenter"
+              data-aos="fade-up"
+              data-aos-delay="500"
+              data-aos-once="true"
+              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
             >
-              <div class="inner">
-                <div class="thumbnail">
-                  <a href="javascript:void(0)">
-                    <img
-                      src="assets/images/portfolio/portfolio-05.jpg"
-                      alt="Personal Portfolio Images"
-                    />
-                  </a>
-                </div>
-                <div class="content">
-                  <div class="category-info">
-                    <div class="category-list">
-                      <a href="javascript:void(0)">Photoshop</a>
-                    </div>
-                    <div class="meta">
-                      <span
-                        ><a href="javascript:void(0)"
-                          ><i class="feather-heart"></i
-                        ></a>
-                        630</span
-                      >
-                    </div>
+              <div
+                class="rn-portfolio"
+                data-toggle="modal"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
+              >
+                <div class="inner">
+                  <div class="thumbnail">
+                    <a href="javascript:void(0)">
+                      <img
+                        src="assets/images/portfolio/portfolio-04.jpg"
+                        alt="Personal Portfolio Images"
+                      />
+                    </a>
                   </div>
-                  <h4 class="title">
-                    <a href="javascript:void(0)"
-                      >Logo design creativity & Application
-                      <i class="feather-arrow-up-right"></i
-                    ></a>
-                  </h4>
+                  <div class="content">
+                    <div class="category-info">
+                      <div class="category-list">
+                        <a href="javascript:void(0)">Photoshop</a>
+                      </div>
+                      <div class="meta">
+                        <span
+                          ><a href="javascript:void(0)"
+                            ><i class="feather-heart"></i
+                          ></a>
+                          630</span
+                        >
+                      </div>
+                    </div>
+                    <h4 class="title">
+                      <a href="javascript:void(0)"
+                        >Logo design creativity & Application
+                        <i class="feather-arrow-up-right"></i
+                      ></a>
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- End Single Portfolio -->
-                      <!-- Start Single Portfolio -->
-                      <div
-                      data-aos="fade-up"
-                      data-aos-delay="500"
-                      data-aos-once="true"
-                      class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
-                    >
-                      <div
-                        class="rn-portfolio"
-                        data-toggle="modal"
-                        data-target="#exampleModalCenter"
-                      >
-                        <div class="inner">
-                          <div class="thumbnail">
-                            <a href="javascript:void(0)">
-                              <img
-                                src="assets/images/portfolio/portfolio-06.jpg"
-                                alt="Personal Portfolio Images"
-                              />
-                            </a>
-                          </div>
-                          <div class="content">
-                            <div class="category-info">
-                              <div class="category-list">
-                                <a href="javascript:void(0)">Photoshop</a>
-                              </div>
-                              <div class="meta">
-                                <span
-                                  ><a href="javascript:void(0)"
-                                    ><i class="feather-heart"></i
-                                  ></a>
-                                  630</span
-                                >
-                              </div>
-                            </div>
-                            <h4 class="title">
-                              <a href="javascript:void(0)"
-                                >Logo design creativity & Application
-                                <i class="feather-arrow-up-right"></i
-                              ></a>
-                            </h4>
-                          </div>
-                        </div>
+            <!-- End Single Portfolio -->
+            <!-- Start Single Portfolio -->
+            <div
+              data-aos="fade-up"
+              data-aos-delay="500"
+              data-aos-once="true"
+              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
+            >
+              <div
+                class="rn-portfolio"
+                data-toggle="modal"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
+              >
+                <div class="inner">
+                  <div class="thumbnail">
+                    <a href="javascript:void(0)">
+                      <img
+                        src="assets/images/portfolio/portfolio-05.jpg"
+                        alt="Personal Portfolio Images"
+                      />
+                    </a>
+                  </div>
+                  <div class="content">
+                    <div class="category-info">
+                      <div class="category-list">
+                        <a href="javascript:void(0)">Photoshop</a>
+                      </div>
+                      <div class="meta">
+                        <span
+                          ><a href="javascript:void(0)"
+                            ><i class="feather-heart"></i
+                          ></a>
+                          630</span
+                        >
                       </div>
                     </div>
-                    <!-- End Single Portfolio -->
+                    <h4 class="title">
+                      <a href="javascript:void(0)"
+                        >Logo design creativity & Application
+                        <i class="feather-arrow-up-right"></i
+                      ></a>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Single Portfolio -->
+            <!-- Start Single Portfolio -->
+            <div
+              data-aos="fade-up"
+              data-aos-delay="500"
+              data-aos-once="true"
+              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
+            >
+              <div
+                class="rn-portfolio"
+                data-toggle="modal"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
+              >
+                <div class="inner">
+                  <div class="thumbnail">
+                    <a href="javascript:void(0)">
+                      <img
+                        src="assets/images/portfolio/portfolio-06.jpg"
+                        alt="Personal Portfolio Images"
+                      />
+                    </a>
+                  </div>
+                  <div class="content">
+                    <div class="category-info">
+                      <div class="category-list">
+                        <a href="javascript:void(0)">Photoshop</a>
+                      </div>
+                      <div class="meta">
+                        <span
+                          ><a href="javascript:void(0)"
+                            ><i class="feather-heart"></i
+                          ></a>
+                          630</span
+                        >
+                      </div>
+                    </div>
+                    <h4 class="title">
+                      <a href="javascript:void(0)"
+                        >Logo design creativity & Application
+                        <i class="feather-arrow-up-right"></i
+                      ></a>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Single Portfolio -->
           </div>
         </div>
       </div>
@@ -1726,7 +1750,7 @@
               <div
                 class="rn-blog"
                 data-toggle="modal"
-                data-target="#exampleModalCenters"
+                data-target="#portfolioModals"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -1769,7 +1793,7 @@
               <div
                 class="rn-blog"
                 data-toggle="modal"
-                data-target="#exampleModalCenters"
+                data-target="#portfolioModals"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -1812,7 +1836,7 @@
               <div
                 class="rn-blog"
                 data-toggle="modal"
-                data-target="#exampleModalCenters"
+                data-target="#portfolioModals"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -3047,7 +3071,10 @@
         </div>
         <div class="copyright text-center ptb--40 section-separator">
           <p class="description">
-            © 2021. All rights reserved by <a target="_blank" href="https://github.com/zubairbhuian">Zubair Bhuian</a>
+            © 2021. All rights reserved by
+            <a target="_blank" href="https://github.com/zubairbhuian"
+              >Zubair Bhuian</a
+            >
           </p>
         </div>
       </div>
@@ -3056,7 +3083,7 @@
       <!-- Modal Portfolio Body area Start -->
       <div
         class="modal fade"
-        id="exampleModalCenter"
+        id="portfolioModal"
         tabindex="-1"
         role="dialog"
         aria-hidden="true"
@@ -3078,11 +3105,7 @@
                 <div class="col-lg-6">
                   <div class="portfolio-popup-thumbnail">
                     <div class="image">
-                      <img
-                        class="w-100"
-                        src="assets/images/portfolio/portfolio-04.jpg"
-                        alt="slide"
-                      />
+                      <img class="w-100 modal-img" src="" alt="slide" />
                     </div>
                   </div>
                 </div>
@@ -3090,26 +3113,21 @@
                 <div class="col-lg-6">
                   <div class="text-content">
                     <h3>
-                      <span>Featured - Design</span> App Design Development.
+                      <span class="molal-app-featured"></span>
                     </h3>
-                    <p class="mb--30">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cupiditate distinctio assumenda explicabo veniam
-                      temporibus eligendi.
-                    </p>
-                    <p>
-                      Consectetur adipisicing elit. Cupiditate distinctio
-                      assumenda. dolorum alias suscipit rerum maiores aliquam
-                      earum odit, nihil culpa quas iusto hic minus!
-                    </p>
+
+                    <h5 class="title"></h5>
+                    <p class="mb--30 modal-dis"></p>
+                    <h6>Featured</h6>
+                    <p class="my-featured"></p>
                     <div class="button-group mt--20">
-                      <a href="#" class="rn-btn thumbs-icon">
-                        <span>LIKE THIS</span>
-                        <i data-feather="thumbs-up"></i>
+                      <a target="_blank" href="#" class="rn-btn thumbs-icon github_a">
+                        <span>VIEW SOURCE</span>
+                        <i data-feather="github"></i>
                       </a>
-                      <a href="#" class="rn-btn">
-                        <span>VIEW PROJECT</span>
-                        <i data-feather="chevron-right"></i>
+                      <a href="#" target="_blank" class="rn-btn liveLink_a">
+                        <span>VIEW DEMO</span>
+                        <i data-feather="external-link"></i>
                       </a>
                     </div>
                   </div>
@@ -3125,7 +3143,7 @@
       <!-- Modal Blog Body area Start -->
       <div
         class="modal fade"
-        id="exampleModalCenters"
+        id="portfolioModals"
         tabindex="-1"
         role="dialog"
         aria-hidden="true"
