--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     data-target=".navbar-example2"
     data-offset="150"
   >
+  <!-- Loder -->
+  <div class="preloader">
+		<div class="preloader-inner">
+			<div class="preloader-icon">
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+	</div>
+
+  </div>
     <!-- start Header area -->
     <div class="d-none d-xl-block">
       <header
