--- a/index.html
+++ b/index.html
@@ -33,17 +33,16 @@
     data-target=".navbar-example2"
     data-offset="150"
   >
-  <!-- Loder -->
-  <div class="preloader">
-		<div class="preloader-inner">
-			<div class="preloader-icon">
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</div>
+    <!-- Loder -->
+    <div class="preloader">
+      <div class="preloader-inner">
+        <div class="preloader-icon">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
 
-  </div>
     <!-- start Header area -->
     <div class="d-none d-xl-block">
       <header
@@ -266,8 +265,8 @@
                 </span>
                 <!-- type headline end -->
                 <div class="button-area">
-                  <a class="rn-btn" href="#contacts"
-                    ><span>Download CV</span></a
+                  <a class="rn-btn mr-4" href="cv-zubair-bhuian.pdf"
+                    download><span>Download CV</span></a
                   >
                   <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
                 </div>
@@ -726,7 +725,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="section-title text-center">
-                <span class="subtitle">7+ Years of Experience</span>
+                <span class="subtitle">4+ Years of Experience</span>
                 <h2 class="title">My Resume</h2>
               </div>
             </div>
@@ -1916,29 +1915,21 @@
                     call in to my account.
                   </p>
                   <span class="phone"
-                    >Phone: <a href="tel:01941043264">+8801732665086</a></span
+                    >Phone: <a href="tel:01732665086">+8801732665086</a></span
                   >
                   <span class="mail"
                     >Email:
-                    <a href="mailto:admin@example.com"
+                    <a href="mailto:zubairbhuian@gmail.com"
                       >zubairbhuian@gmail.com</a
                     ></span
                   >
                 </div>
                 <div class="social-area">
-                  <div class="name">FIND WITH ME</div>
+                  <div class="name">CONTACT WITH ME</div>
                   <div class="social-icone">
-                    <a target="_blank" href="https://github.com/zubairbhuian"
-                      ><i data-feather="facebook"></i
-                    ></a>
-                    <a
-                      target="_blank"
-                      href="https://www.linkedin.com/in/zubairbhuian/"
-                      ><i data-feather="linkedin"></i
-                    ></a>
-                    <a target="_blank" href="https://github.com/zubairbhuian"
-                      ><i data-feather="github"></i
-                    ></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="#"><i class="fa-brands fa-skype"></i></a>
                   </div>
                 </div>
               </div>
@@ -3132,7 +3123,11 @@
                     <h6>Featured</h6>
                     <p class="my-featured"></p>
                     <div class="button-group mt--20">
-                      <a target="_blank" href="#" class="rn-btn thumbs-icon github_a">
+                      <a
+                        target="_blank"
+                        href="#"
+                        class="rn-btn thumbs-icon github_a"
+                      >
                         <span>VIEW SOURCE</span>
                         <i data-feather="github"></i>
                       </a>
