--- a/index.html
+++ b/index.html
@@ -309,13 +309,12 @@
               <div class="rn-service">
                 <div class="inner">
                   <div class="icon">
-                    <i data-feather="menu"></i>
+                    <i data-feather="smartphone"></i>
                   </div>
                   <div class="content">
-                    <h4 class="title"><a href="#">Business Stratagy</a></h4>
+                    <h4 class="title"><a href="#">Mobile app Development</a></h4>
                     <p class="description">
-                      I throw myself down among the tall grass by the stream as
-                      I lie close to the earth.
+                      
                     </p>
                     <a class="read-more-button" href="#"
                       ><i class="feather-arrow-right"></i
@@ -337,10 +336,10 @@
               <div class="rn-service">
                 <div class="inner">
                   <div class="icon">
-                    <i data-feather="book-open"></i>
+                    <i data-feather="code"></i>
                   </div>
                   <div class="content">
-                    <h4 class="title"><a href="#">App Development</a></h4>
+                    <h4 class="title"><a href="#">Web Development</a></h4>
                     <p class="description">
                       It uses a dictionary of over 200 Latin words, combined
                       with a handful of model sentence.
@@ -365,10 +364,10 @@
               <div class="rn-service">
                 <div class="inner">
                   <div class="icon">
-                    <i data-feather="tv"></i>
+                    <i data-feather="pen-tool"></i>
                   </div>
                   <div class="content">
-                    <h4 class="title"><a href="#">App Development</a></h4>
+                    <h4 class="title"><a href="#">UI/UX</a></h4>
                     <p class="description">
                       I throw myself down among the tall grass by the stream as
                       I lie close to the earth.
@@ -382,6 +381,89 @@
               </div>
             </div>
             <!-- End SIngle Service -->
+            <div
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-delay="100"
+            data-aos-once="true"
+            class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
+          >
+            <div class="rn-service">
+              <div class="inner">
+                <div class="icon">
+                  <i data-feather="mail"></i>
+                </div>
+                <div class="content">
+                  <h4 class="title"><a href="#">Email Template </a></h4>
+                  <p class="description">
+                    I throw myself down among the tall grass by the stream as
+                    I lie close to the earth.
+                  </p>
+                  <a class="read-more-button" href="#"
+                    ><i class="feather-arrow-right"></i
+                  ></a>
+                </div>
+              </div>
+              <a class="over-link" href="#"></a>
+            </div>
+          </div>
+          <!-- End SIngle Service -->
+          <!-- Start Single Service -->
+          <div
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-delay="300"
+            data-aos-once="true"
+            class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
+          >
+            <div class="rn-service">
+              <div class="inner">
+                <div class="icon">
+                  <i data-feather="book-open"></i>
+                </div>
+                <div class="content">
+                  <h4 class="title"><a href="#">Api Integration</a></h4>
+                  <p class="description">
+                    It uses a dictionary of over 200 Latin words, combined
+                    with a handful of model sentence.
+                  </p>
+                  <a class="read-more-button" href="#"
+                    ><i class="feather-arrow-right"></i
+                  ></a>
+                </div>
+              </div>
+              <a class="over-link" href="#"></a>
+            </div>
+          </div>
+          <!-- End SIngle Service -->
+          <!-- Start Single Service -->
+          <div
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-delay="500"
+            data-aos-once="true"
+            class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
+          >
+            <div class="rn-service">
+              <div class="inner">
+                <div class="icon">
+                  <i data-feather="tv"></i>
+                </div>
+                <div class="content">
+                  <h4 class="title"><a href="#">Backend Development</a></h4>
+                  <p class="description">
+                    I throw myself down among the tall grass by the stream as
+                    I lie close to the earth.
+                  </p>
+                  <a class="read-more-button" href="#"
+                    ><i class="feather-arrow-right"></i
+                  ></a>
+                </div>
+              </div>
+              <a class="over-link" href="#"></a>
+            </div>
+          </div>
+          <!-- End SIngle Service -->
           </div>
         </div>
       </div>
